--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^10.5.1",
+    "@react-three/fiber": "^9.2.0",
     "framer-motion": "^12.23.3",
     "lenis": "^1.3.4",
     "motion": "^12.23.3",
@@ -16,7 +18,8 @@
     "ogl": "^1.0.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "three": "^0.167.1"
   },
   "devDependencies": {
     "@types/node": "^20",
