--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@react-three/drei": "^10.5.1",
     "@react-three/fiber": "^9.2.0",
-    "framer-motion": "^12.23.3",
+    "critters": "^0.0.23",
+    "framer-motion": "^12.23.6",
     "lenis": "^1.3.4",
     "motion": "^12.23.3",
     "next": "15.3.5",
