--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.4.5",
     "@react-three/drei": "^10.5.1",
     "@react-three/fiber": "^9.2.0",
     "critters": "^0.0.23",
@@ -17,9 +20,12 @@
     "motion": "^12.23.3",
     "next": "15.3.5",
     "ogl": "^1.0.11",
+    "prismjs": "^1.30.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "rehype-prism-plus": "^2.0.1",
+    "remark-gfm": "^4.0.1",
     "three": "^0.167.1"
   },
   "devDependencies": {
